# learning-agno

./: 0.llm_call.py  1.1.researcher.py  1.2.finantialAnalist.py  1.3.ownTools.py  12_finantialAnalist.py  13_agnoMemory.py  13_ownTools.py  21_agnoKnowledge.py  21_pdfAgent.py  hello.py  main.py  pyproject.toml
tmp/: agent.db  knowledge.db
tmp/lancedb/pdf_agent.lance/_transactions/: 0-966c0922-fb76-4ac9-ac6f-b8c4dd447667.txn  1-8df6c37b-9561-4023-97a2-47d31e4e21ab.txn
tmp/lancedb/pdf_agent.lance/_versions/: 1.manifest  2.manifest
