[project]
name = "learning-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.2.3",
    "fastapi>=0.121.0",
    "groq>=0.33.0",
    "lancedb>=0.25.2",
    "openai>=2.6.1",
    "pip>=25.3",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "tavily>=1.0.0",
    "tavily-python>=0.7.12",
    "yfinance>=0.2.66",
]
